--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,7 @@ form {
   padding-bottom: 2em;
   
   border-radius: 30px;
-  border: 1px solid
+  border: 1px solid;
   
 }
 
@@ -42,18 +42,17 @@ select {
   margin: 5px 0 0 0;
   width: 100%;
   min-height: 2em;
-  font-size: 18px
+  font-size: 18px;
   
 }
 
 input, textarea {
   background-color: white;
-  /*border: 1px solid #0a0a23;*/
   color: #0a0a23;
 }
 
 .inline {
-  width: 20;
+  width: 20px;
   margin: 0 0.5em 0 0;
   vertical-align: middle;
   display: inline; 
